# avatar-plus

./: README.md  env-template  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
.devcontainer/: devcontainer.json
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: demo.py
app/api/app/: api.py
app/api/web/: api.py
app/api/wechat/: api.py
app/base/: config.py  deta_base.py  deta_drive.py
app/core/image/: config.py  service.py
app/core/wechat/: service.py
app/core/wechat/sample/: get_access_token.json  get_user_info.json  subscribe.xml  text_message.xml
app/handler/: demo.py
app/middleware/: debug_api.py
app/utils/: image.py  timeit.py
